--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "html-thumbnail",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "React component to render thumbnails from html",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest",
+    "build": "babel src  --out-dir dist",
+    "prepublish": "yarn build"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,19 @@
   },
   "homepage": "https://github.com/rcowin/htmlthumbnail#readme",
   "dependencies": {
-    "html2canvas": "^1.0.0-rc.5"
+    "html2canvas": "^1.0.0-rc.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-jest": "^23.2.0",
+    "jest": "^23.6.0",
+    "regenerator-runtime": "^0.12.1"
   }
 }
